# serializer version: 1
# name: TestDatabase.test_database_warehouse_joins_persons_poe_v2
  'SELECT events__some_field.key AS key FROM events LEFT JOIN (SELECT groups.key AS key, key AS events__some_field___key FROM (SELECT groups.group_type_index AS index, groups.group_key AS key FROM groups WHERE equals(groups.team_id, 217) GROUP BY groups.group_type_index, groups.group_key) AS groups) AS events__some_field ON equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_0)s), \'\'), \'null\'), \'^"|"$\', \'\'), events__some_field.events__some_field___key) WHERE equals(events.team_id, 217) LIMIT 10000'
# ---
# name: TestDatabase.test_serialize_database_no_person_on_events
  '''
  {
      "events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "event",
              "type": "string"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "elements_chain",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "$session_id",
              "type": "string"
          },
          {
              "key": "$window_id",
              "type": "string"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "$group_0",
              "type": "string"
          },
          {
              "key": "group_0",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_1",
              "type": "string"
          },
          {
              "key": "group_1",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_2",
              "type": "string"
          },
          {
              "key": "group_2",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_3",
              "type": "string"
          },
          {
              "key": "group_3",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_4",
              "type": "string"
          },
          {
              "key": "group_4",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "session",
              "type": "lazy_table",
              "table": "sessions",
              "fields": [
                  "id",
                  "session_id",
                  "team_id",
                  "distinct_id",
                  "$start_timestamp",
                  "$end_timestamp",
                  "$urls",
                  "$entry_current_url",
                  "$entry_pathname",
                  "$exit_current_url",
                  "$exit_pathname",
                  "$entry_utm_source",
                  "$entry_utm_campaign",
                  "$entry_utm_medium",
                  "$entry_utm_term",
                  "$entry_utm_content",
                  "$entry_referring_domain",
                  "$entry_gclid",
                  "$entry_gad_source",
                  "$event_count_map",
                  "$pageview_count",
                  "$autocapture_count",
                  "$channel_type",
                  "$session_duration",
                  "duration",
                  "$is_bounce"
              ]
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ]
          },
          {
              "key": "$virt_initial_referring_domain_type",
              "type": "expression"
          },
          {
              "key": "$virt_initial_channel_type",
              "type": "expression"
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ]
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "first_url",
              "type": "string"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "event_count",
              "type": "integer"
          },
          {
              "key": "message_count",
              "type": "integer"
          },
          {
              "key": "events",
              "type": "lazy_table",
              "table": "events",
              "fields": [
                  "uuid",
                  "event",
                  "properties",
                  "timestamp",
                  "team_id",
                  "distinct_id",
                  "elements_chain",
                  "created_at",
                  "$session_id",
                  "$window_id",
                  "pdi",
                  "poe",
                  "goe_0",
                  "goe_1",
                  "goe_2",
                  "goe_3",
                  "goe_4",
                  "person",
                  "person_id",
                  "$group_0",
                  "group_0",
                  "$group_1",
                  "group_1",
                  "$group_2",
                  "group_2",
                  "$group_3",
                  "group_3",
                  "$group_4",
                  "group_4",
                  "session"
              ]
          },
          {
              "key": "properties",
              "type": "field_traverser",
              "chain": [
                  "events",
                  "properties"
              ]
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "console_logs",
              "type": "lazy_table",
              "table": "console_logs_log_entries",
              "fields": [
                  "team_id",
                  "log_source",
                  "log_source_id",
                  "instance_id",
                  "timestamp",
                  "message",
                  "level"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "start_time",
              "type": "datetime"
          },
          {
              "key": "end_time",
              "type": "datetime"
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ]
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ]
          }
      ],
      "log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "sessions": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "$start_timestamp",
              "type": "datetime"
          },
          {
              "key": "$end_timestamp",
              "type": "datetime"
          },
          {
              "key": "$urls",
              "type": "array"
          },
          {
              "key": "$entry_current_url",
              "type": "string"
          },
          {
              "key": "$entry_pathname",
              "type": "string"
          },
          {
              "key": "$exit_current_url",
              "type": "string"
          },
          {
              "key": "$exit_pathname",
              "type": "string"
          },
          {
              "key": "$entry_utm_source",
              "type": "string"
          },
          {
              "key": "$entry_utm_campaign",
              "type": "string"
          },
          {
              "key": "$entry_utm_medium",
              "type": "string"
          },
          {
              "key": "$entry_utm_term",
              "type": "string"
          },
          {
              "key": "$entry_utm_content",
              "type": "string"
          },
          {
              "key": "$entry_referring_domain",
              "type": "string"
          },
          {
              "key": "$entry_gclid",
              "type": "string"
          },
          {
              "key": "$entry_gad_source",
              "type": "string"
          },
          {
              "key": "$pageview_count",
              "type": "integer"
          },
          {
              "key": "$autocapture_count",
              "type": "integer"
          },
          {
              "key": "$channel_type",
              "type": "string"
          },
          {
              "key": "$session_duration",
              "type": "integer"
          },
          {
              "key": "duration",
              "type": "integer"
          },
          {
              "key": "$is_bounce",
              "type": "boolean"
          }
      ],
      "heatmaps": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "x",
              "type": "integer"
          },
          {
              "key": "y",
              "type": "integer"
          },
          {
              "key": "scale_factor",
              "type": "integer"
          },
          {
              "key": "viewport_width",
              "type": "integer"
          },
          {
              "key": "viewport_height",
              "type": "integer"
          },
          {
              "key": "pointer_target_fixed",
              "type": "boolean"
          },
          {
              "key": "current_url",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "type",
              "type": "string"
          }
      ]
  }
  '''
# ---
# name: TestDatabase.test_serialize_database_with_person_on_events_enabled
  '''
  {
      "events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "event",
              "type": "string"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "elements_chain",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "$session_id",
              "type": "string"
          },
          {
              "key": "$window_id",
              "type": "string"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "poe"
              ]
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "$group_0",
              "type": "string"
          },
          {
              "key": "group_0",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_1",
              "type": "string"
          },
          {
              "key": "group_1",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_2",
              "type": "string"
          },
          {
              "key": "group_2",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_3",
              "type": "string"
          },
          {
              "key": "group_3",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_4",
              "type": "string"
          },
          {
              "key": "group_4",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "session",
              "type": "lazy_table",
              "table": "sessions",
              "fields": [
                  "id",
                  "session_id",
                  "team_id",
                  "distinct_id",
                  "$start_timestamp",
                  "$end_timestamp",
                  "$urls",
                  "$entry_current_url",
                  "$entry_pathname",
                  "$exit_current_url",
                  "$exit_pathname",
                  "$entry_utm_source",
                  "$entry_utm_campaign",
                  "$entry_utm_medium",
                  "$entry_utm_term",
                  "$entry_utm_content",
                  "$entry_referring_domain",
                  "$entry_gclid",
                  "$entry_gad_source",
                  "$event_count_map",
                  "$pageview_count",
                  "$autocapture_count",
                  "$channel_type",
                  "$session_duration",
                  "duration",
                  "$is_bounce"
              ]
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ]
          },
          {
              "key": "$virt_initial_referring_domain_type",
              "type": "expression"
          },
          {
              "key": "$virt_initial_channel_type",
              "type": "expression"
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ]
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "first_url",
              "type": "string"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "event_count",
              "type": "integer"
          },
          {
              "key": "message_count",
              "type": "integer"
          },
          {
              "key": "events",
              "type": "lazy_table",
              "table": "events",
              "fields": [
                  "uuid",
                  "event",
                  "properties",
                  "timestamp",
                  "team_id",
                  "distinct_id",
                  "elements_chain",
                  "created_at",
                  "$session_id",
                  "$window_id",
                  "pdi",
                  "poe",
                  "goe_0",
                  "goe_1",
                  "goe_2",
                  "goe_3",
                  "goe_4",
                  "person",
                  "person_id",
                  "$group_0",
                  "group_0",
                  "$group_1",
                  "group_1",
                  "$group_2",
                  "group_2",
                  "$group_3",
                  "group_3",
                  "$group_4",
                  "group_4",
                  "session"
              ]
          },
          {
              "key": "properties",
              "type": "field_traverser",
              "chain": [
                  "events",
                  "properties"
              ]
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "console_logs",
              "type": "lazy_table",
              "table": "console_logs_log_entries",
              "fields": [
                  "team_id",
                  "log_source",
                  "log_source_id",
                  "instance_id",
                  "timestamp",
                  "message",
                  "level"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "start_time",
              "type": "datetime"
          },
          {
              "key": "end_time",
              "type": "datetime"
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ]
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi",
                  "$virt_initial_referring_domain_type",
                  "$virt_initial_channel_type"
              ]
          }
      ],
      "log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "sessions": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "$start_timestamp",
              "type": "datetime"
          },
          {
              "key": "$end_timestamp",
              "type": "datetime"
          },
          {
              "key": "$urls",
              "type": "array"
          },
          {
              "key": "$entry_current_url",
              "type": "string"
          },
          {
              "key": "$entry_pathname",
              "type": "string"
          },
          {
              "key": "$exit_current_url",
              "type": "string"
          },
          {
              "key": "$exit_pathname",
              "type": "string"
          },
          {
              "key": "$entry_utm_source",
              "type": "string"
          },
          {
              "key": "$entry_utm_campaign",
              "type": "string"
          },
          {
              "key": "$entry_utm_medium",
              "type": "string"
          },
          {
              "key": "$entry_utm_term",
              "type": "string"
          },
          {
              "key": "$entry_utm_content",
              "type": "string"
          },
          {
              "key": "$entry_referring_domain",
              "type": "string"
          },
          {
              "key": "$entry_gclid",
              "type": "string"
          },
          {
              "key": "$entry_gad_source",
              "type": "string"
          },
          {
              "key": "$pageview_count",
              "type": "integer"
          },
          {
              "key": "$autocapture_count",
              "type": "integer"
          },
          {
              "key": "$channel_type",
              "type": "string"
          },
          {
              "key": "$session_duration",
              "type": "integer"
          },
          {
              "key": "duration",
              "type": "integer"
          },
          {
              "key": "$is_bounce",
              "type": "boolean"
          }
      ],
      "heatmaps": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "x",
              "type": "integer"
          },
          {
              "key": "y",
              "type": "integer"
          },
          {
              "key": "scale_factor",
              "type": "integer"
          },
          {
              "key": "viewport_width",
              "type": "integer"
          },
          {
              "key": "viewport_height",
              "type": "integer"
          },
          {
              "key": "pointer_target_fixed",
              "type": "boolean"
          },
          {
              "key": "current_url",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "type",
              "type": "string"
          }
      ]
  }
  '''
# ---
